# stips

./: .env.2020wnt  .env.2020wnt.ps1  .env.2023ixf  .env.2023ixf.ps1  .env.example  .env.recal  .env.recalib  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  .ruffignore  CHANGELOG.md  CHANGELOG_OBSERVING_NIGHT_SCHEMA.md  CLAUDE.md  DIA.md  Makefile  PS1_IMPLEMENTATION_SUMMARY.md  PS1_TEMPLATES_README.md  PS1_TEMPLATE_SUCCESS.md  QUICKSTART_PS1_TEST.md  QUICKSTART_RECAL.md  README.md  README_RECAL.md  RECAL_SETUP_SUMMARY.md  TEST_2020WNT_RECAL.md  TEST_PS1_COMMANDS.sh  camera  configs  debug.py  nights.txt  nights_2020wnt_recal_test.txt  pipelines  pyproject.toml  python  template_metadata.json  test_ps1_large.sh  test_recal_2020wnt.sh  tests  tox.ini  (+2 more)
analysis/: calibration_assessment.ipynb  landolt_validation.csv  landolt_validation_4nights.csv
bps/: base.yaml
camera/: nickel.yaml
configs/: analysisToolsPhotometricCatalogMatchVisi.py  analysisToolsPhotometricCatalogMatchVisit.py  apcorr_loosen.py  apcorr_loosen_old.py  apply_colorterms.py  astrometry_large_offset.py  astrometry_overrides.py  astrometry_refine.py  astrometry_relaxed.py  astrometry_strict.py  colorterms.py  filterMap.py  filter_map.py  makeSkyMap.py  makeSkyMap_discrete_auto.py  make_skymap.py  psf_detection_relaxed.py
data-manifests/: README.md  archive.yaml  defects.yaml  refcats.yaml  templates.yaml
docker/: Dockerfile  Dockerfile.hpc  Dockerfile.slurm  docker-compose.slurm.yml  docker-compose.yml  entrypoint.sh  nps.def  slurm-entrypoint.sh  slurmd-init.sh  stips.def
docs/: DIA_QUICKSTART.md  NICKEL_TEMPLATE_DIA_GUIDE.md  PS1_TEMPLATE_GUIDE.md  README.md  SPECIALIZED_DIA_WORKFLOWS.md  aas246-iposter-design.md  aas246-iposter-plan.md  architecture-bps-docker-slurm.md  architecture.md  calibration_metrics_assessment.md  cli-reference.md  configuration.md  crosstalk.md  ctio-amp-a01-finding.md  forking-stips.md  getting-started.md  instrument-contract.md  isr_and_calibrateImage_configs.md  logging-improvements.md  logging.md  migrations.md  new-campaign.md  pipeline-brittleness-and-modernization.md  ps1_templates_guide.md  refcat-validation-runbook.md  reference_manual.md  science-configs.md  stack-bump-runbook.md  tuning_guide.md
instruments/ctio1m/obs_ctio1m_data/: README.md  pyproject.toml
instruments/ctio1m/obs_ctio1m_data/CTIO1m/defects/ccd0/: 19700101T000000.ecsv  20100101T000000.ecsv
instruments/ctio1m/obs_ctio1m_data/python/lsst/obs/ctio1m_data/: __init__.py
instruments/ctio1m/obs_ctio1m_data/ups/: obs_ctio1m_data.table
pipelines/: CoaddOnly.yaml  DIA.yaml  DRP.yaml  PostProcessing.yaml  run_full.sh  (+10 more)
(+378 files in other folders)
