[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "obs-nickel"
version = "0.1.0"
description = "LSST obs package for the Nickel telescope"
authors = [{ name = "Dan Gause" }]
dependencies = [
    "astro_metadata_translator>=0.11.0",
    "astropy",
    "fastparquet>=2024.11.0",
    "jupyterlab>=4.4.7",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "pyarrow>=21.0.0",
    "pyvo>=1.7",
]

[tool.setuptools]
packages = { find = { where = ["python"] } }

[project.entry-points."astro_metadata_translator.translators"]
Nickel = "lsst.obs.nickel.translator:NickelTranslator"

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = ["__init__.py"]

[tool.ruff.lint]
ignore = ["N802", "N803", "N806", "N812", "N813", "N815", "N816", "N999"]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "N", # pep8-naming
    "W", # pycodestyle
]
extend-select = [
    "RUF100", # Warn about unused noqa
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "numpy"
